remove lastModified.js, fix URLs, shorter lines

--- a/unicodetools/data/charts/collation/help.html
+++ b/unicodetools/data/charts/collation/help.html
@@ -119,14 +119,14 @@ character in the chart, as follows.</p>
     Private Use Area, etc. are represented by a sampling.</li>
   <li>Some unassigned code points, noncharacters and other edge cases are also 
     added to the list for comparison.</li>
-  <li>For more information, see <a href="http://www.unicode.org/unicode/reports/tr10/" target="_top">UTS 
+  <li>For more information, see <a href="https://www.unicode.org/reports/tr10/" target="_top">UTS 
     #10: Unicode Collation Algorithm</a>.</li>
 </ul>
 	<p>
 		<i>To properly view these charts, you need to have an updated
 			browser and Unicode fonts that cover the characters you are
 			interested in. For more information, see <a
-			href='http://www.unicode.org/help/display_problems.html'>Display
+			href='https://www.unicode.org/help/display_problems.html'>Display
 				Problems</a>.
 		</i>
 	</p>
