--- a/unicodetools/data/charts/normalization/help.html
+++ b/unicodetools/data/charts/normalization/help.html
@@ -28,7 +28,7 @@ differ from at least one of their normalization forms (C, D, KC, KD).</p>
       <li>By general category, in the latter two cases</li>
     </ul>
   </li>
-  <li>Within each chart page, the code points are sorted by folded <a href="http://www.unicode.org/unicode/reports/tr15/" target="_top">NFKD</a>, 
+  <li>Within each chart page, the code points are sorted by folded <a href="https://www.unicode.org/reports/tr15/" target="_top">NFKD</a>, 
     to place related characters next to one another.</li>
   <li>To keep the size of the Hangul chart manageable, characters U+AD00..U+D6FF 
     (관..훿) are omitted.</li>
@@ -48,14 +48,14 @@ differ from at least one of their normalization forms (C, D, KC, KD).</p>
   </li>
   <li>If your browser supports tool-tips, then hovering your mouse over cells 
     will show the names of the characters.</li>
-  <li>For more information, see <a href="http://www.unicode.org/unicode/reports/tr15/" target="_top">UAX 
+  <li>For more information, see <a href="https://www.unicode.org/reports/tr15/" target="_top">UAX 
     #15: Unicode Normalization Forms</a>.</li>
 </ul>
 	<p>
 		<i>To properly view these charts, you need to have an updated
 			browser and Unicode fonts that cover the characters you are
 			interested in. For more information, see <a
-			href='http://www.unicode.org/help/display_problems.html'>Display
+			href='https://www.unicode.org/help/display_problems.html'>Display
 				Problems</a>.
 		</i>
 	</p>
