--- a/unicodetools/data/uca/14.0.0/CollationTest.html
+++ b/unicodetools/data/uca/14.0.0/CollationTest.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="en-us">
-<link rel="stylesheet" href="http://www.unicode.org/reports/reports.css" type="text/css">
+<link rel="stylesheet" href="https://www.unicode.org/reports/reports-v2.css" type="text/css">
 <title>UCA Conformance Tests</title>
 </head>
 
@@ -12,9 +12,9 @@
 
 <table class="header">
   <tbody><tr>
-    <td class="icon"><a href="http://www.unicode.org">
-    <img alt="[Unicode]" src="http://www.unicode.org/webscripts/logo60s2.gif" align="middle" border="0" height="33" width="34"></a>&nbsp;&nbsp;<a class="bar" href="http://www.unicode.org/reports/tr10/">Unicode
-    Collation Algorithm</a></td>
+    <td class="icon"><a href="https://www.unicode.org">
+    <img alt="[Unicode]" src="https://www.unicode.org/webscripts/logo60s2.gif" align="middle" border="0" height="33" width="34"></a>&nbsp;&nbsp;
+    <a class="bar" href="https://www.unicode.org/reports/tr10/">Unicode Collation Algorithm</a></td>
   </tr>
   <tr>
     <td class="gray">&nbsp;</td>
@@ -22,9 +22,9 @@
 </tbody></table>
 <div class="body">
   <h1>Unicode® Collation Algorithm<br>Conformance Tests</h1>
-  <h2 align="center" class="changed">Version 14.0.0<br>2021-06-08</h2>
+  <h2 align="center">Version 14.0.0<br>2021-09-13</h2>
 <p>The following files provide conformance tests for the Unicode Collation Algorithm
-  (<a href="http://www.unicode.org/reports/tr10/tr10-44.html">UTS #10: Unicode Collation Algorithm</a>).</p>
+  (<a href="https://www.unicode.org/reports/tr10/tr10-45.html">UTS #10: Unicode Collation Algorithm</a>).</p>
   <ul>
     <li>CollationTest_SHIFTED.txt</li>
     <li>CollationTest_NON_IGNORABLE.txt</li>
@@ -37,7 +37,7 @@
   <p>There are four different files:</p>
   <ul>
     <li>The shifted vs non-ignorable files correspond to the two alternate
-      <a href="http://www.unicode.org/reports/tr10/tr10-44.html#Variable_Weighting">Variable Weighting</a> values.</li>
+      <a href="https://www.unicode.org/reports/tr10/tr10-45.html#Variable_Weighting">Variable Weighting</a> values.</li>
     <li>The SHORT versions omit the comments, for more compact storage.</li>
   </ul>
 <p>The format is illustrated by the following example:</p>
@@ -46,7 +46,7 @@
   After the hash mark is a comment. This comment is purely informational, and may change in the 
   future. Currently it consists of the characters of the sequence in parentheses,
   the name of the first code point, and a representation of 
-  the&nbsp; sort key for the sequence.</p>
+  the sort key for the sequence.</p>
   <p>The sort key representation is in square brackets. It uses a vertical bar for the ZERO 
   separator. Between the bars are the primary, secondary, tertiary, and quaternary weights (if any), 
   in hex.</p>
@@ -64,7 +64,7 @@
   <h2>Testing</h2>
   <p>The files are designed so each line in the file will order as being greater than or equal to 
   the previous one, when using the UCA and the
-  <a href="http://www.unicode.org/reports/tr10/tr10-44.html#Default_Unicode_Collation_Element_Table">Default
+  <a href="https://www.unicode.org/reports/tr10/tr10-45.html#Default_Unicode_Collation_Element_Table">Default
   Unicode Collation Element Table</a>.
   A test program can read in each line, compare it to 
   the last line, and signal an error if order is not correct. The exact comparison that should be 
@@ -115,14 +115,14 @@
     <li>S2.1.1 loops over each of the following three characters C,
     but there is no table entry for any of those three S+C.
     In particular, there is no DUCET mapping for 0FB2+0F71
-    (see <i><a href="http://www.unicode.org/reports/tr10/tr10-44.html#Well_Formed_DUCET">Tibetan and
+    (see <i><a href="https://www.unicode.org/reports/tr10/tr10-45.html#Well_Formed_DUCET">Tibetan and
     Well-Formedness of DUCET</a></i>).</li>
     <li>The loop exits without finding any match beyond S=0FB2.</li>
   </ul>
 
   <p>See “Also note that the Algorithm employs two distinct contraction matching methods:”
   at the end of <i>Section 7.2,
-  <a href="http://www.unicode.org/reports/tr10/tr10-44.html#Step_2">Produce Collation Element Arrays</a></i>.</p>
+  <a href="https://www.unicode.org/reports/tr10/tr10-45.html#Step_2">Produce Collation Element Arrays</a></i>.</p>
 
   <hr width="50%">
   <p class="copyright">© 2021 Unicode, Inc. All Rights Reserved.
@@ -131,7 +131,7 @@
   is assumed for incidental and consequential damages in connection with or arising 
   out of the use of the information or programs contained or accompanying this 
   technical report. The Unicode
-  <a href="http://www.unicode.org/copyright.html">Terms of Use</a> apply.
+  <a href="https://www.unicode.org/copyright.html">Terms of Use</a> apply.
   </p>
   <p class="copyright">Unicode and the Unicode logo are trademarks 
   of Unicode, Inc., and are registered in some jurisdictions.</p>
