--- a/unicodetools/org/unicode/jsptest/css_test_page.html
+++ b/unicodetools/org/unicode/jsptest/css_test_page.html
@@ -8,7 +8,19 @@
 
 <body>
 <h1>Unicode Utilities: UnicodeSet</h1>
-<p><a target="help" href="http://cldr.unicode.org/unicode-utilities/list-unicodeset"><strong>help</strong></a> | <a target="character" href="http://unicode.org/cldr/utility/character.jsp">character</a> | <a target="properties" href="http://unicode.org/cldr/utility/properties.jsp">properties</a> | <a target="confusables" href="http://unicode.org/cldr/utility/confusables.jsp">confusables</a> | <a target="list" href="http://unicode.org/cldr/utility/list-unicodeset.jsp">unicode-set</a> | <a target="compare" href="http://unicode.org/cldr/utility/unicodeset.jsp">compare-sets</a> | <a target="regex" href="http://unicode.org/cldr/utility/regex.jsp">regex</a> | <a target="bnf" href="http://unicode.org/cldr/utility/bnf.jsp">bnf-regex</a> | <a target="breaks" href="http://unicode.org/cldr/utility/breaks.jsp">breaks</a> | <a target="transform" href="http://unicode.org/cldr/utility/transform.jsp">transform</a> | <a target="bidi" href="http://unicode.org/cldr/utility/bidi.jsp">bidi</a> | <a target="idna" href="http://unicode.org/cldr/utility/idna.jsp">idna</a> | <a target="languageid" href="http://unicode.org/cldr/utility/languageid.jsp">languageid</a></p>
+<p><a target="help" href="https://util.unicode.org/UnicodeJsps/list-unicodeset.jsp"><strong>help</strong></a> |
+  <a target="character" href="https://util.unicode.org/UnicodeJsps/character.jsp">character</a> |
+  <a target="properties" href="https://util.unicode.org/UnicodeJsps/properties.jsp">properties</a> |
+  <a target="confusables" href="https://util.unicode.org/UnicodeJsps/confusables.jsp">confusables</a> |
+  <a target="list" href="https://util.unicode.org/UnicodeJsps/list-unicodeset.jsp">unicode-set</a> |
+  <a target="compare" href="https://util.unicode.org/UnicodeJsps/unicodeset.jsp">compare-sets</a> |
+  <a target="regex" href="https://util.unicode.org/UnicodeJsps/regex.jsp">regex</a> |
+  <a target="bnf" href="https://util.unicode.org/UnicodeJsps/bnf.jsp">bnf-regex</a> |
+  <a target="breaks" href="https://util.unicode.org/UnicodeJsps/breaks.jsp">breaks</a> |
+  <a target="transform" href="https://util.unicode.org/UnicodeJsps/transform.jsp">transform</a> |
+  <a target="bidi" href="https://util.unicode.org/UnicodeJsps/bidi.jsp">bidi</a> |
+  <a target="idna" href="https://util.unicode.org/UnicodeJsps/idna.jsp">idna</a> |
+  <a target="languageid" href="https://util.unicode.org/UnicodeJsps/languageid.jsp">languageid</a></p>
 <form name="myform" id="myform">
   <table border="1" cellpadding="0" cellspacing="0">
     <tbody>
