--- a/unicodetools/org/unicode/text/UCA/case_help.html
+++ b/unicodetools/org/unicode/text/UCA/case_help.html
@@ -40,7 +40,7 @@ a.new {
 			</ul>
 		</li>
 		<li>Within each chart page, the code points are sorted by
-			lowercased <a href="http://www.unicode.org/unicode/reports/tr15/"
+			lowercased <a href="https://www.unicode.org/reports/tr15/"
 			target="_top">NFKD</a>, to place related characters next to one
 			another.
 		</li>
@@ -64,7 +64,7 @@ a.new {
 	<p>Hovering over a cell will show the name of the character in that
 		cell.</p>
 	<p>
-<p><i>To properly view these charts, you need to have an updated browser, and Unicode fonts (such as the <a href="http://www.google.com/get/noto/" target="_blank">Noto Fonts</a>)
+<p><i>To properly view these charts, you need to have an updated browser, and Unicode fonts (such as the <a href="https://www.google.com/get/noto/" target="_blank">Noto Fonts</a>)
   that cover the characters you are interested in</i>.</p>
 </body>
 
