--- a/unicodetools/org/unicode/text/UCD/StandardizedVariants-Template.html
+++ b/unicodetools/org/unicode/text/UCD/StandardizedVariants-Template.html
@@ -12,16 +12,18 @@
 <meta name="keywords" content="unicode, variant glyphs">
 <meta name="description" content="Describes and displays standardized variant glyphs">
 
-<title>Standardized Variants</title><link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports.css"></head>
-
+<title>Standardized Variants</title><link rel="stylesheet" type="text/css"
+  href="https://www.unicode.org/reports/reports-v2.css"></head>
 
 <body bgcolor="#ffffff">
 
 <table class="header">
   <tbody><tr>
-    <td class="icon"><a href="http://www.unicode.org">
-    <img alt="[Unicode]" src="http://www.unicode.org/webscripts/logo60s2.gif" align="middle" border="0" height="33" width="34"></a>&nbsp;&nbsp;<a class="bar" href="http://www.unicode.org/ucd">Unicode 
-    Character Database</a></td>
+    <td class="icon">
+      <a href="https://www.unicode.org">
+      <img alt="[Unicode]" src="https://www.unicode.org/webscripts/logo60s2.gif"
+        align="middle" border="0" height="33" width="34"></a>&nbsp;&nbsp;
+      <a class="bar" href="https://www.unicode.org/ucd">Unicode Character Database</a></td>
   </tr>
   <tr>
     <td class="gray">&nbsp;</td>
@@ -44,17 +46,18 @@
     </tr>
     <tr>
       <td valign="top" width="144">This Version</td>
-      <td valign="top"><a href="http://www.unicode.org/Public/@updateDirectory@/@filename@.html">
-      http://www.unicode.org/Public/@updateDirectory@/@filename@.html</a></td>
+      <td valign="top"><a href="https://www.unicode.org/Public/@updateDirectory@/@filename@.html">
+      https://www.unicode.org/Public/@updateDirectory@/@filename@.html</a></td>
     </tr>
     <tr>
       <td valign="top" width="144">Previous Version</td>
-      <td valign="top"><a href="http://www.unicode.org/Public/@lastDirectory@/@filename@.html">
-		http://www.unicode.org/Public/@lastDirectory@/@filename@.html</a></td>
+      <td valign="top"><a href="https://www.unicode.org/Public/@lastDirectory@/@filename@.html">
+		https://www.unicode.org/Public/@lastDirectory@/@filename@.html</a></td>
     </tr>
     <tr>
       <td valign="top" width="144">Latest Version</td>
-      <td valign="top"><a href="http://www.unicode.org/Public/UNIDATA/@filename@.html">http://www.unicode.org/Public/UNIDATA/@filename@.html</a></td>
+      <td valign="top"><a href="https://www.unicode.org/Public/UNIDATA/@filename@.html">
+        https://www.unicode.org/Public/UNIDATA/@filename@.html</a></td>
     </tr>
   </tbody></table>
   <h3><br>
@@ -66,30 +69,41 @@
   <h3><i>Status</i></h3>
   <blockquote>
     <p><i>This file and the files described herein are part of the Unicode Character Database and 
-    are governed by the terms of use at <a href="http://www.unicode.org/terms_of_use.html">
-    http://www.unicode.org/terms_of_use.html</a>.</i></p>
+    are governed by the terms of use at <a href="https://www.unicode.org/terms_of_use.html">
+    https://www.unicode.org/terms_of_use.html</a>.</i></p>
   </blockquote>
   <hr width="50%">
   <h2>Introduction</h2>
-  <p>Standardized
-variation sequences are defined in StandardizedVariants.txt and are
-displayed in the table in this document, with the exception of 
-standardized variants of Unified_Ideograph characters with U+FE00..U+FE02,
-which provide the visual appearance of a CJK compatibility ideograph.
-Ideographic variation
-sequences are defined according to the registration process specified
-in <em><a href='http://www.unicode.org/reports/tr37/'>UTS #37: Unicode Ideographic Variation Database</a></em>, and are listed in the <a href='http://www.unicode.org/ivd/'>Ideographic Variation Database</a>. Only
-    those two types of variation sequences are sanctioned for use by
-  conformant implementations. </p>
+  <p>Standardized variation sequences are defined in StandardizedVariants.txt and are
+    displayed in the table in this document, with the exception of 
+    standardized variants of Unified_Ideograph characters with U+FE00..U+FE02,
+    which provide the visual appearance of a CJK compatibility ideograph.
+    Ideographic variation
+    sequences are defined according to the registration process specified
+    in <em><a href='https://www.unicode.org/reports/tr37/'>UTS #37: Unicode Ideographic Variation Database</a></em>,
+    and are listed in the <a href='https://www.unicode.org/ivd/'>Ideographic Variation Database</a>.
+    Only those two types of variation sequences are sanctioned for use by
+    conformant implementations.</p>
   <p>In all other cases, use of a variation
     selector character does not change the visual appearance of the
     preceding base character from what it would have had in the absence of
   the variation selector.  </p>
-  <p>The mathematical variants are all produced with the addition of U+FE00 VARIATION SELECTOR-1 (VS1) to mathematical operator base characters. There is no variation according to context. The 
-    Mongolian variants use the Mongolian free variation selectors, and may vary according to context. That 
-    is, if a contextual shape is not listed below, then the variation sequence has an unmodified 
-  appearance.</p>
-  <p>The emoji style variants are all produced with the addition of U+FE0E VARIATION SELECTOR-15 (VS15) for a text presentation or U+FE0F VARIATION SELECTOR-16 (VS16) for an emoji presentation. The colored glyphs used to show the variations below are purely illustrative. For other examples of colored glyphs, see <a href="http://unicode.org/emoji/charts"><em>Emoji Charts</em></a>. For more information about emoji variation sequences, including guidelines on variations in glyph shapes and colors, see <a href='http://unicode.org/reports/tr51'><em>UTR #51: Unicode Emoji</em></a>.</p>
+  <p>The mathematical variants are all produced with the addition of
+    U+FE00 VARIATION SELECTOR-1 (VS1) to mathematical operator base characters.
+    There is no variation according to context.
+    The Mongolian variants use the Mongolian free variation selectors,
+    and may vary according to context.
+    That is, if a contextual shape is not listed below,
+    then the variation sequence has an unmodified appearance.</p>
+  <p>The emoji style variants are all produced with the addition of
+    U+FE0E VARIATION SELECTOR-15 (VS15) for a text presentation or
+    U+FE0F VARIATION SELECTOR-16 (VS16) for an emoji presentation.
+    The colored glyphs used to show the variations below are purely illustrative.
+    For other examples of colored glyphs, see
+    <a href="https://unicode.org/emoji/charts"><em>Emoji Charts</em></a>.
+    For more information about emoji variation sequences,
+    including guidelines on variations in glyph shapes and colors,
+    see <a href='https://unicode.org/reports/tr51'><em>UTR #51: Unicode Emoji</em></a>.</p>
   <blockquote>
     <p><a name="fonts"><b>Note: </b></a>The glyphs used to show the variations are often derived 
     from different physical fonts than the representative glyphs in the standard. They may therefore 
@@ -105,12 +119,11 @@ in <em><a href='http://www.unicode.org/reports/tr37/'>UTS #37: Unicode Ideograph
     <center>
     <table border="0" cellpadding="0" cellspacing="0">
       <tbody><tr>
-        <td><a href="http://www.unicode.org/unicode/copyright.html">
-        <img src="http://www.unicode.org/img/hb_notice.gif" alt="Access to Copyright and terms of use" border="0" height="50" width="216"></a></td>
+        <td><a href="https://www.unicode.org/copyright.html">
+        <img src="https://www.unicode.org/img/hb_notice.gif"
+          alt="Access to Copyright and terms of use" border="0" height="50" width="216"></a></td>
       </tr>
     </tbody></table>
-    <script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
-    </script>
     </center>
   </div>
 </blockquote>
