--- a/unicodetools/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/org/unicode/tools/emoji/main-index.html
@@ -37,23 +37,25 @@ There are two approaches for disabling the text autosizer feature:
 			class='bar' target='text' href='index.html'>Emoji Charts</a> </div>
 <div class='gray'>&nbsp;</div>
 <div class='main'>
-        <div class='aacButton' title='Show your support of Unicode'> <a target='sponsors' href='../../consortium/adopt-a-character.html'><b>Adopt-a-Character</b><br>
-          <img class='aacImage' alt='AAC Animation'
-						src='../../consortium/images/aac-some-sponsors.gif'></a> </div>
+        <div class='aacButton' title='Show your support of Unicode'>
+          <a target='sponsors' href='../../consortium/adopt-a-character.html'><b>Adopt-a-Character</b><br>
+          <img class='aacImage' alt='AAC Animation' src='../../consortium/images/aac-some-sponsors.gif'></a></div>
         <h1> Unicode® Emoji Charts v%%VERSION%%</h1>
-        <p style='text-align:center'><a target='emoji_subsite' href='https://www.unicode.org/emoji/techindex.html'>Main Emoji Page</a></p>
+        <p style='text-align:center'>
+          <a target='emoji_subsite' href='https://www.unicode.org/emoji/techindex.html'>Main Emoji Page</a></p>
         %%LINK_OTHER%%
         <p>The following charts have been generated to illustrate various
           features of the emoji characters in Unicode. These are derived from
           the <a target='tr51' href='%%TR51_DATA%%'>data files for UTS #51,
-          Unicode Emoji</a>, and the annotation and ordering data from the <a
-						target='cldr' href="http://cldr.unicode.org">Unicode CLDR project</a>.
-          For a set of slides about emoji, see <a target='emoji_subsite' href='../index.html'>Emoji Slides</a>. </p>
-        <p>While these charts use a particular version of the <a target='emoji-data' 
-        href='https://unicode.org/Public/emoji/'>Unicode Emoji data files</a>, the images and format may be updated at any time.
+          Unicode Emoji</a>, and the annotation and ordering data from the
+          <a target='cldr' href="https://cldr.unicode.org">Unicode CLDR project</a>.
+          For a set of slides about emoji, see <a target='emoji_subsite' href='../index.html'>Emoji Slides</a>.</p>
+        <p>While these charts use a particular version of the
+          <a target='emoji-data' href='https://unicode.org/Public/emoji/'>Unicode Emoji data files</a>,
+          the images and format may be updated at any time.
           For any production usage, those files should be
-          consulted. For column descriptions, see <a target='text' 
-								href='../format.html'>Emoji Chart Format</a>.</p>
+          consulted. For column descriptions, see
+          <a target='text' href='../format.html'>Emoji Chart Format</a>.</p>
         <div align="center">
           <table class='simple' border="1" cellpadding="1" cellspacing="0">
             <tr>
@@ -66,23 +68,24 @@ There are two approaches for disabling the text autosizer feature:
             </tr>
             <tr>
               <td style='min-width: 10em'><span style='white-space: nowrap'>Full Emoji List</span><br>
-                <i>Skin Tones: </i><span style='white-space: nowrap'><a target='full' href="full-emoji-list.html">Without</a> 
-                • <a target="full-skin" href="full-emoji-modifiers.html">Only</a></span></td>
-              <td>Emoji characters and sequences for Emoji v%%VERSION%%, with images from major sources and a Browser column. </td>
+                <i>Skin Tones: </i><span style='white-space: nowrap'>
+                <a target='full' href="full-emoji-list.html">Without</a> •
+                <a target="full-skin" href="full-emoji-modifiers.html">Only</a></span></td>
+              <td>Emoji characters and sequences for Emoji v%%VERSION%%,
+                with images from major sources and a Browser column.</td>
             </tr>
             <tr>
-              <td ><a target='released' href="emoji-released.html">Emoji
-                Recently Added</a></td>
+              <td><a target='released' href="emoji-released.html">Emoji Recently Added</a></td>
               <td>Emoji recently added to Emoji v%%VERSION%%.</td>
             </tr>
             <tr>
-              <td >Emoji Candidates<br>                
-                <span style='white-space: nowrap'><a target='candidates'
-								href="../future/emoji-provisional.html">Provisional</a> • <a target='candidates'
-								href="../future/emoji-candidates.html">Draft</a></span></td>
-              <td>Characters accepted by the UTC as <a
-								target='_blank'
-								href='https://unicode.org/emoji/proposals.html#timeline'>candidates</a> for a future version of emoji.</td>
+              <td >Emoji Candidates<br>
+                <span style='white-space: nowrap'>
+                <a target='candidates' href="../future/emoji-provisional.html">Provisional</a> •
+                <a target='candidates' href="../future/emoji-candidates.html">Draft</a></span></td>
+              <td>Characters accepted by the UTC as
+                <a target='_blank' href='https://unicode.org/emoji/proposals.html#timeline'>candidates</a>
+                for a future version of emoji.</td>
             </tr>
             <tr>
               <td ><a target='zwj' href="emoji-zwj-sequences.html">Emoji
@@ -90,20 +93,20 @@ There are two approaches for disabling the text autosizer feature:
               <td>Recommended <em>emoji zwj sequences</em> for Emoji v%%VERSION%%. </td>
             </tr>
             <!--
-						<tr>
-							<td ><a target='annotate'
-								href="emoji-annotations.html">Emoji Annotations</a></td>
-							<td>Shows characters grouped by annotation, based on <a
-								href="https://unicode.org/repos/cldr/trunk/common/annotations/">data
-									from CLDR</a>. The annotations are meant to be used in combination
-								to winnow down the matches, so <em>:face moon:</em> would match
-								the characters annotated with both “face” and with “moon”. <em>Also
-									in the Annotations column of <a target='full'
-									href="full-emoji-list.html">Full Emoji List</a>, see <a
-									href='#chart_notation'>Chart Notation</a>.
-							</em></td>
-						</tr>
-						-->
+		<tr>
+			<td ><a target='annotate'
+				href="emoji-annotations.html">Emoji Annotations</a></td>
+			<td>Shows characters grouped by annotation, based on <a
+				href="https://unicode.org/repos/cldr/trunk/common/annotations/">data
+					from CLDR</a>. The annotations are meant to be used in combination
+				to winnow down the matches, so <em>:face moon:</em> would match
+				the characters annotated with both “face” and with “moon”. <em>Also
+					in the Annotations column of <a target='full'
+					href="full-emoji-list.html">Full Emoji List</a>, see <a
+					href='#chart_notation'>Chart Notation</a>.
+			</em></td>
+		</tr>
+		-->
             <tr>
               <th colspan='2'>Sort Order &amp; Counts</th>
             </tr>
@@ -112,7 +115,7 @@ There are two approaches for disabling the text autosizer feature:
                 Ordering</a></td>
               <td>The Emoji v%%VERSION%% characters and sequences in the
                 recommended sort order, which groups like characters together;
-                using <a href='http://cldr.unicode.org/' target='cldr'>CLDR</a> data. </td>
+                using <a href='https://cldr.unicode.org/' target='cldr'>CLDR</a> data. </td>
             </tr>
             <tr>
               <td ><a target='counts' href="emoji-counts.html">Emoji
@@ -123,8 +126,7 @@ There are two approaches for disabling the text autosizer feature:
               <th colspan='2'>Versions</th>
             </tr>
              <tr>
-              <td  class='changed'><a target='proposals'
-								href="emoji-proposals.html">Emoji Proposals</a></td>
+              <td class='changed'><a target='proposals' href="emoji-proposals.html">Emoji Proposals</a></td>
               <td class='changed'>Proposals for accepted emoji characters.</td>
             </tr>
             <tr>
@@ -133,20 +135,17 @@ There are two approaches for disabling the text autosizer feature:
               <td>When emoji characters were added to Unicode.</td>
             </tr>
             <tr>
-              <td ><a target='versions-sources'
-								href="emoji-versions-sources.html">Emoji Versions &amp;
-                Sources</a></td>
-              <td>When emoji characters were added to Unicode,
-                including sources. </td>
+              <td><a target='versions-sources' href="emoji-versions-sources.html">Emoji Versions &amp; Sources</a></td>
+              <td>When emoji characters were added to Unicode, including sources.</td>
             </tr>
             <!--
-						<tr>
-							<td ><a target='style' href="emoji-sequences.html">Emoji
-									Sequences</a></td>
-							<td>Shows emoji character sequences: keycaps, flags, and
-								modifier sequences.</td>
-						</tr>
-						-->
+		<tr>
+			<td ><a target='style' href="emoji-sequences.html">Emoji
+					Sequences</a></td>
+			<td>Shows emoji character sequences: keycaps, flags, and
+				modifier sequences.</td>
+		</tr>
+		-->
             <tr>
               <th colspan='2'>Presentation</th>
             </tr>
@@ -178,12 +177,10 @@ There are two approaches for disabling the text autosizer feature:
           </table>
         </div>
         <div class='copyright'> <br>
-          <a href='http://www.unicode.org/unicode/copyright.html'><img
-						src='http://www.unicode.org/img/hb_notice.gif'
-						style='border-style: none; width: 216px;'
-						alt='Access to Copyright and terms of use'></a><br>
-          <script language='Javascript' type='text/javascript'
-						src='http://www.unicode.org/webscripts/lastModified.js'></script> 
+          <a href='https://www.unicode.org/copyright.html'><img
+		src='https://www.unicode.org/img/hb_notice.gif'
+		style='border-style: none; width: 216px;'
+		alt='Access to Copyright and terms of use'></a><br>
         </div>
       </div>
 </body>
