--- a/unicodetools/data/charts/case/help.html
+++ b/unicodetools/data/charts/case/help.html
@@ -35,7 +35,7 @@ a.new {
 			</ul>
 		</li>
 		<li>Within each chart page, the code points are sorted by
-			lowercased <a href="http://www.unicode.org/unicode/reports/tr15/"
+			lowercased <a href="https://www.unicode.org/reports/tr15/"
 			target="_top">NFKD</a>, to place related characters next to one
 			another.
 		</li>
@@ -62,7 +62,7 @@ a.new {
 		<i>To properly view these charts, you need to have an updated
 			browser and Unicode fonts that cover the characters you are
 			interested in. For more information, see <a
-			href='http://www.unicode.org/help/display_problems.html'>Display
+			href='https://www.unicode.org/help/display_problems.html'>Display
 				Problems</a>.
 		</i>
 	</p>
