--- a/unicodetools/org/unicode/text/UCD/NamedSequences-Template.html
+++ b/unicodetools/org/unicode/text/UCD/NamedSequences-Template.html
@@ -14,7 +14,7 @@
 <meta name="keywords" content="unicode, variant glyphs">
 <meta name="description" content="Describes and displays standardized variant glyphs">
 <title>Named Sequences</title>
-<link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports.css">
+<link rel="stylesheet" type="text/css" href="https://www.unicode.org/reports/reports-v2.css">
 <style>
 <!--
 .copy	{ text-align: center; font-size: 150% }
@@ -29,16 +29,18 @@ table	{ padding: 2pt }
 
 <table class="header">
   <tr>
-    <td class="icon"><a href="http://www.unicode.org">
-    <img align="middle" alt="[Unicode]" border="0" src="http://www.unicode.org/webscripts/logo60s2.gif" width="34" height="33"></a>&nbsp;&nbsp;<a class="bar" href="http://www.unicode.org/ucd">Unicode 
-    Character Database</a></td>
+    <td class="icon"><a href="https://www.unicode.org">
+    <img align="middle" alt="[Unicode]" border="0"
+      src="https://www.unicode.org/webscripts/logo60s2.gif" width="34" height="33"></a>&nbsp;&nbsp;
+    <a class="bar" href="https://www.unicode.org/ucd">Unicode Character Database</a></td>
   </tr>
   <tr>
     <td class="gray">&nbsp;</td>
   </tr>
 </table>
 <div style="margin:1em">
-  <table border="1" cellpadding="0" cellspacing="1" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber1">
+  <table border="1" cellpadding="0" cellspacing="1"
+    style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber1">
     <tr>
       <td width="100%">
       <p style="text-align: right">L2-XXX</p>
@@ -76,8 +78,8 @@ table	{ padding: 2pt }
     <tr>
       <td valign="top" width="144">This Version</td>
       <td valign="top">
-      <a href="http://www.unicode.org/Public/@updateDirectory@/NamedSequences-@revision@.html">
-      http://www.unicode.org/Public/@updateDirectory@/NamedSequences-@revision@.html</a></td>
+      <a href="https://www.unicode.org/Public/@updateDirectory@/NamedSequences-@revision@.html">
+      https://www.unicode.org/Public/@updateDirectory@/NamedSequences-@revision@.html</a></td>
     </tr>
     <tr>
       <td valign="top" width="144">Previous Version</td>
@@ -97,7 +99,7 @@ table	{ padding: 2pt }
   <h3><i>Status</i></h3>
   <blockquote>
     <p><i>The file and the files described herein are part of the
-    <a href="http://www.unicode.org/ucd">Unicode Character Database</a> (UCD) and are governed by 
+    <a href="https://www.unicode.org/ucd">Unicode Character Database</a> (UCD) and are governed by 
     the <a href="#Terms of Use">UCD Terms of Use</a> stated at the end.</i></p>
   </blockquote>
   <hr width="50%">
@@ -107,7 +109,7 @@ table	{ padding: 2pt }
   addition, there is a last column entitled <i>Copyable</i>, which contains the literal text forming 
   the sequence. That text can be copied and pasting in elsewhere. The display of the text in this 
   column is up to the capabilities of the browser and the set of available fonts. For more 
-  information, see <a href="http://www.unicode.org/help/display_problems.html">Display Problems?</a>.</p>
+  information, see <a href="https://www.unicode.org/help/display_problems.html">Display Problems?</a>.</p>
   <blockquote>
     <p><a name="fonts"><b>Note: </b></a>The representative glyphs used to show the names sequences 
     are often derived from different physical fonts than the representative glyphs in the standard. 
@@ -141,12 +143,11 @@ table	{ padding: 2pt }
     <center>
     <table cellspacing="0" cellpadding="0" border="0">
       <tr>
-        <td><a href="http://www.unicode.org/unicode/copyright.html">
-        <img src="http://www.unicode.org/img/hb_notice.gif" border="0" alt="Access to Copyright and terms of use" width="216" height="50"></a></td>
+        <td><a href="https://www.unicode.org/copyright.html">
+        <img src="https://www.unicode.org/img/hb_notice.gif" border="0"
+          alt="Access to Copyright and terms of use" width="216" height="50"></a></td>
       </tr>
     </table>
-    <script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
-    </script>
     </center>
   </div>
   <blockquote>
