first round of addressing LGTM.com alerts

--- a/unicodetools/data/ucd/3.1.0-Update/NamesList.html
+++ b/unicodetools/data/ucd/3.1.0-Update/NamesList.html
@@ -362,7 +362,7 @@ UCD <a name="Terms of Use">Terms of Use</a></h2>
                   alt="E-mail" width="46" height="49"></a></td>  
               </tr>  
             </table>  
-            <script language="Javascript" src="http://www.unicode.org/webscripts/lastModified.js"></script>                
+            <script language="Javascript" src="https://www.unicode.org/webscripts/lastModified.js"></script>                
             </center>  
           </div>  
 </form>  
