--- a/unicodetools/data/ucd/5.0.0-Update/NamesList.html
+++ b/unicodetools/data/ucd/5.0.0-Update/NamesList.html
@@ -361,7 +361,7 @@ COMMENT:		&quot;(&quot; LABEL &quot;)&quot;
       </tr>
     </table>
 
-<script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
+<script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js">
                 </script>
     </center>
   </div>
@@ -370,4 +370,3 @@ COMMENT:		&quot;(&quot; LABEL &quot;)&quot;
 </body>
 
 </html>
-
