--- a/unicodetools/data/ucd/5.0.0-Update/UCD.html
+++ b/unicodetools/data/ucd/5.0.0-Update/UCD.html
@@ -2753,7 +2753,7 @@ window.open = SymWinOpen;
 //-->
 </script>
 
-<script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
+<script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js">
                 </script>
     </center>
   </div>
@@ -2762,4 +2762,3 @@ window.open = SymWinOpen;
 </body>
 
 </html>
-
