--- a/unicodetools/data/ucd/6.1.0-Update/StandardizedVariants.html
+++ b/unicodetools/data/ucd/6.1.0-Update/StandardizedVariants.html
@@ -1634,7 +1634,7 @@ the variation selector.</p><p>The mathematical variants are all produced with th
         <img src="http://www.unicode.org/img/hb_notice.gif" alt="Access to Copyright and terms of use" border="0" height="50" width="216"></a></td>
       </tr>
     </tbody></table>
-    <script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
+    <script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js">
     </script>
     </center>
   </div>
