--- a/unicodetools/data/ucd/8.0.0-Update/StandardizedVariants.html
+++ b/unicodetools/data/ucd/8.0.0-Update/StandardizedVariants.html
@@ -1754,7 +1754,7 @@ in <em><a href='http://www.unicode.org/reports/tr37/'>UTS #37: Unicode Ideograph
         <img src="http://www.unicode.org/img/hb_notice.gif" alt="Access to Copyright and terms of use" border="0" height="50" width="216"></a></td>
       </tr>
     </tbody></table>
-    <script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
+    <script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js">
     </script>
     </center>
   </div>
