--- a/unicodetools/src/main/resources/org/unicode/text/UCD/UCD-in-XML-Notes.htm
+++ b/unicodetools/src/main/resources/org/unicode/text/UCD/UCD-in-XML-Notes.htm
@@ -15,7 +15,7 @@ td           { padding: 4 }
 
 <body>
 
-<span class="cb" id style="DISPLAY: block">
+<span class="cb" style="DISPLAY: block">
 <h1 align="center">Unicode Character Database (UCD) in XML Format</h1>
 <h1 align="center"><b><font color="#FF0000">WARNING: FORMAT IS DRAFT!</font></b></h1>
 <p align="center">MD 2000.10.16</p>
@@ -105,7 +105,7 @@ Since the PropList values are so long, they will probably also be abbreviated in
 the future.</p>
 <table border="1" width="100%">
   <tr>
-    <td width="50%" valign="top"><span class="cb" id style="DISPLAY: block">
+    <td width="50%" valign="top"><span class="cb" style="DISPLAY: block">
       <h4>UnicodeData</h4>
       <p>&nbsp; c: code point<br>
       &nbsp; n: name<br>
@@ -127,7 +127,7 @@ the future.</p>
       &nbsp; sc: special case condition</p>
       <h4>CaseFolding:</h4>
       <p>&nbsp; fc: foldcase (=sl)</span></td>
-    <td width="50%" valign="top"><span class="cb" id style="DISPLAY: block">
+    <td width="50%" valign="top"><span class="cb" style="DISPLAY: block">
       <h4>CompositionExclusions:</h4>
       <p>&nbsp; ce: composition exclusion (N)</p>
       <h4>EastAsianWidth:</h4>
@@ -176,7 +176,7 @@ changes, detailed below.</p>
       <p>The fields are based on the proposed PropList.alpha, which changes the
       fields considerably.</p>
       </font>
-      <p><span class="cb" id style="display: block"><b><i>WARNING: other values
+      <p><span class="cb" style="display: block"><b><i>WARNING: other values
       are also likely to change!</i></b></span></p>
     </td>
   </tr>
