--- a/unicodetools/data/ucd/3.2.0-Update/StandardizedVariants.html
+++ b/unicodetools/data/ucd/3.2.0-Update/StandardizedVariants.html
@@ -829,7 +829,7 @@
     <img src="http://www.unicode.org/img/hb_notice.gif" border="0" alt="Access to Copyright and terms of use" width="216" height="50"></a></td>
     </tr>
     </table>
-    <script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js"></script>
+    <script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js"></script>
     </center>
     </div>
 
