--- a/unicodetools/data/ucd/4.0.0-Update/StandardizedVariants.html
+++ b/unicodetools/data/ucd/4.0.0-Update/StandardizedVariants.html
@@ -562,7 +562,7 @@
         <td><a href="http://www.unicode.org/unicode/copyright.html"><img src="http://www.unicode.org/img/hb_notice.gif" border="0" alt="Access to Copyright and terms of use" width="216" height="50"></a></td>
       </tr>
     </table>
-    <script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js"></script>
+    <script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js"></script>
     </center>
   </div>
 </blockquote>
