--- a/unicodetools/data/ucd/4.0.1-Update/UCD.html
+++ b/unicodetools/data/ucd/4.0.1-Update/UCD.html
@@ -2562,7 +2562,7 @@ widening to ints in Java. </li>
         <td><a href="http://www.unicode.org/copyright.html"><img src="http://www.unicode.org/img/hb_notice.gif" border="0" alt="Access to Copyright and terms of use" width="216" height="50"></a></td>
       </tr>
     </table>
-              <script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
+              <script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js">
                 </script></center>
   </div>
 </div>
