--- a/unicodetools/data/ucd/4.1.0-Update/UCD.html
+++ b/unicodetools/data/ucd/4.1.0-Update/UCD.html
@@ -2526,7 +2526,7 @@ extensively revised, and now appears in Unihan.html.</p>
         <img src="http://www.unicode.org/img/hb_notice.gif" border="0" alt="Access to Copyright and terms of use" width="216" height="50"></a></td>
       </tr>
     </table>
-    <script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
+    <script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js">
                 </script>
     </center>
   </div>
