--- a/unicodetools/data/ucd/5.0.0-Update/Unihan.html
+++ b/unicodetools/data/ucd/5.0.0-Update/Unihan.html
@@ -3488,7 +3488,7 @@ th           { background-color: #CCFFCC }
         <img src="http://www.unicode.org/img/hb_notice.gif" border="0" alt="Access to Copyright and terms of use" width="216" height="50"></a></td>
       </tr>
     </table>
-    <script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
+    <script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js">
                 </script>
     </center>
   </div>
