--- a/unicodetools/data/ucd/5.1.0-Update/UCD.html
+++ b/unicodetools/data/ucd/5.1.0-Update/UCD.html
@@ -3148,7 +3148,7 @@ window.open = SymWinOpen;
 //-->
 </script>
 
-<script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
+<script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js">
                 </script>
     </center>
   </div>
@@ -3157,4 +3157,3 @@ window.open = SymWinOpen;
 </body>
 
 </html>
-
