--- a/unicodetools/data/ucd/7.0.0-Update/NamesList.html
+++ b/unicodetools/data/ucd/7.0.0-Update/NamesList.html
@@ -583,7 +583,7 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
         <img src="http://www.unicode.org/img/hb_notice.gif" border="0" alt="Access to Copyright and terms of use" width="216" height="50"></a></td>
       </tr>
     </table>
-<script language="Javascript" type="text/javascript" src="http://www.unicode.org/webscripts/lastModified.js">
+<script language="Javascript" type="text/javascript" src="https://www.unicode.org/webscripts/lastModified.js">
                 </script>
     </center>
   </div>
@@ -592,4 +592,3 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
 </body>
 
 </html>
-
