--- a/unicodetools/data/ucd/9.0.0-Update/auxiliary/WordBreakTest.html
+++ b/unicodetools/data/ucd/9.0.0-Update/auxiliary/WordBreakTest.html
@@ -169,7 +169,7 @@ td, th { vertical-align: top }
 <img src='http://www.unicode.org/img/hb_notice.gif' border='0' alt='Access to Copyright and terms of use' width='216' height='50'></a></td>
 </tr>
 </table>
-<script language='Javascript' type='text/javascript' src='http://www.unicode.org/webscripts/lastModified.js'>
+<script language='Javascript' type='text/javascript' src='https://www.unicode.org/webscripts/lastModified.js'>
 </script>
 </center>
 </div>
