--- a/unicodetools/data/ucd/dev/NamesList.html
+++ b/unicodetools/data/ucd/dev/NamesList.html
@@ -36,7 +36,7 @@
     <tbody>
       <tr>
         <td valign="top" width="144">Revision</td>
-        <td valign="top">14.0.0</td>
+        <td valign="top" class="changed">15.0.0 (beta review draft)</td>
       </tr>
       <tr>
         <td valign="top" width="144">Authors</td>
@@ -44,19 +44,19 @@
       </tr>
       <tr>
         <td valign="top" width="144">Date</td>
-        <td valign="top">2021-09-01</td>
+        <td valign="top">2022-05-03</td>
       </tr>
       <tr>
         <td valign="top" width="144">This Version</td>
         <td valign="top">
-		<a href="http://www.unicode.org/Public/14.0.0/ucd/NamesList.html">
-		http://www.unicode.org/Public/14.0.0/ucd/NamesList.html</a></td>
+		<a href="http://www.unicode.org/Public/15.0.0/ucd/NamesList.html">
+		http://www.unicode.org/Public/15.0.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Previous Version</td>
         <td valign="top">
-		<a href="http://www.unicode.org/Public/13.0.0/ucd/NamesList.html">
-		http://www.unicode.org/Public/13.0.0/ucd/NamesList.html</a></td>
+		<a href="http://www.unicode.org/Public/14.0.0/ucd/NamesList.html">
+		http://www.unicode.org/Public/14.0.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td valign="top" width="144">Latest Version</td>
@@ -539,6 +539,10 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
 </ul>
   <h2><a name="Modifications" href="#Modifications">Modifications</a></h2>
 
+    <p><b>Version 15.0.0</b></p>
+        <ul>
+        <li>Reissued for Unicode 15.0.0.</li>
+    	</ul>
     <p><b>Version 14.0.0</b></p>
         <ul>
         <li>Reissued for Unicode 14.0.0.</li>
